--- a/public/index.html
+++ b/public/index.html
@@ -87,7 +87,7 @@
 					<div class="arrslide" onclick="slideshow(0)">&#9665;</div><!--slideshow(0)-->
 					<div class="slidepic">
 						<a href="novikurs/index.html"><img src="files/tvojaideja.png" class="secondarypic1" id="slideop1"></a>
-						<a href="dizajn/index.html"><img src="files/dizajnslika.png" class="slidemainpic" id="slideop2"></a>
+						<a href="rob3d/index.html"><img src="files/rob3dslika.png" class="slidemainpic" id="slideop2"></a>
 						<a href="novikurs/index.html"><img src="files/uskorokursevi.png" class="secondarypic2" id="slideop3"></a>
 					</div>
 					<div class="arrslide" onclick="slideshow(1)">&#9655;</div><!--slideshow(1)-->
@@ -141,12 +141,14 @@
 		<div class="sponsors">
 		<span id="prijatelji" style="position:absolute;top:-100px;"></span>
 			<div class="partners">Prijatelji</div>
-			<a href="https://fondacijapazova.rs/" target="_blank"><img src="files/lfsp.png" class="sponsor" id="sponsor1"></a>
-			<a href="https://starapazova.rs/" target="_blank"><img src="files/opstina.png" class="sponsor" id="sponsor2"></a>
-			<a href="https://www.facebook.com/profile.php?id=100068936268404" target="_blank"><img src="files/mzlogo.png" class="sponsor" id="sponsor3"></a>
-			<a href="http://inosrem.rs/" target="_blank"><img src="files/icsp.png" class="sponsor" id="sponsor4"></a>
-			<a href="http://apv.visokoobrazovanje.vojvodina.gov.rs/" target="_blank"><img src="files/sekretarijat.png" class="sponsor" id="sponsor5"></a>
-			<a href="http://voxellab.rs/" target="_blank"><img src="files/voxellab.png" class="sponsor" id="sponsor6"></a>
+			<div class="marquee">
+			<a href="http://voxellab.rs/" target="_blank"><img src="files/voxellab.png" class="sponsor sponsor6"></a>
+			<a href="https://www.facebook.com/profile.php?id=100068936268404" target="_blank"><img src="files/mzlogo.png" class="sponsor sponsor5"></a>
+			<a href="http://apv.visokoobrazovanje.vojvodina.gov.rs/" target="_blank"><img src="files/sekretarijat.png" class="sponsor sponsor4"></a>
+			<a href="https://fondacijapazova.rs/" target="_blank"><img src="files/lfsp.png" class="sponsor sponsor3"></a>
+			<a href="http://inosrem.rs/" target="_blank"><img src="files/icsp.png" class="sponsor sponsor2"></a>
+			<a href="https://starapazova.rs/" target="_blank"><img src="files/opstina.png" class="sponsor sponsor1"></a>
+			</div>
 		</div>
 		
 		<div class="kontaktdiv">
@@ -212,7 +214,6 @@
 		<span class="newline"><a class="headerLinks" onclick="setTimeout('menu()',300);" href="#uclanise"><span id="uclanisespan" class="linija"></span><span id="uclanisehead">Učlani se!</span></a></span>
 		<span class="newline"><a class="headerLinks" onclick="setTimeout('menu()',300);" href="#prijatelji"><span id="prijateljispan" class="linija"></span><span id="prijateljihead">Prijatelji</span></a></span>
 		<span class="newline"><a class="headerLinks" onclick="setTimeout('menu()',300);" href="galerija/index.html"><span id="galerijaspan" class="linija"></span><span id="galerijahead">Galerija</span></a></span>
-		<span class="newline"><a class="headerLinks" onclick="setTimeout('menu()',300);" href="dizajn/index.html"><span id="robotikamaterijalispan" class="linija"></span><span id="robotikamaterijalihead">Dizajn materijali</span></a></span>
 		<span class="newline"><a class="headerLinks" onclick="setTimeout('menu()',300);" href="#kontakt"><span id="kontaktspan" class="linija"></span><span id="kontakthead">Kontakt</span></a></span>
 		</span>
 		<img src="files/logo_transparent.png" class="head_logo" id="headLogo" onclick="location.reload();" alt="ICER">
