--- a/public/rob3d/index.html
+++ b/public/rob3d/index.html
@@ -102,6 +102,14 @@
 						Sva neophodna oprema je obezbeđena, svi materijali i prezentacije će biti dostupni na našem sajtu, a ukoliko želite možete poneti svesku i olovku.
 					</td></tr></table>
 				</div>
+				<div class="postsubtext2 curpointer ps3">
+					<table><tr><th style="vertical-align: text-top;padding-right:2vw;"></th><td>
+						– Kako je ovo besplatno?
+					</td></tr></table><br>
+					<table class="forsubtext"><tr><th style="vertical-align: text-top;padding-right:2vw;"><img src="../files/check.svg" class="check"></th><td>
+						Zahvaljujući našim pokroviteljima i prijateljima centra uspeli smo da nabavimo sve što je neophodno za realizaciju. Spisak svih prijatelja možete videti <a href="https://icerpazova.com/#prijatelji" class="akontakt">ovde</a>.
+					</td></tr></table>
+				</div>
 		</div>
 		
 		<div class="kontaktdiv">
