--- a/public/rob3d/index copy.html
+++ b/public/rob3d/index copy.html
@@ -14,13 +14,103 @@
 	<div class="main">
 		<div class="home2">
 			<div class="rtriangle2"></div>
-			<div class="rtriangle"></div><img src="../files/rob3dslika.png" class="postimage">
+			<div class="rtriangle"></div>
+			<a href="https://forms.gle/Z47EGAU6oioMEncV8" target="_blank"><img src="../files/rob3dslika.png" class="postimage"></a>
 			<div class="posttext2">
 				Robotika i 3D štampa<br>
-				<span style="font-size: 0.7em;">Uskoro više informacija!</span>
+				<span style="font-size: 0.7em;">Prijave su otvorene do 31. oktobra!</span>
+			<div class="postsubtext2">
+			<table><tr><th style="vertical-align: text-top;padding-right:2vw;"><img src="../files/check.svg" class="check"></th><td>
+				Ovaj kurs je namenjen učenicima 7. i 8. razreda osnovnih škola sa teritorije opštine Stara Pazova.<br>
+				<span style="font-size: 0.6em;font-style:italic">Ukoliko želite da pohađate kurs, a ne spadate u ove kriterijume, molimo vas da nas <a href="#kontakt" class="akontakt">kontaktirate</a>.</span>
+			</td></tr></table><br>
+			<table><tr><th style="vertical-align: text-top;padding-right:2vw;"><img src="../files/check.svg" class="check"></th><td>
+				Na prvom delu ovog kursa ući ćemo u svet elektronike!<br>
+				Imaćete priliku da saznate šta je to mikrokontroler, kao i neke osnovne elektronske komponente.
+			</td></tr></table><br>
+			<table><tr><th style="vertical-align: text-top;padding-right:2vw;"><img src="../files/check.svg" class="check"></th><td>
+				Na praktičnim radionicama prolazimo kroz preko 15 vežbi na kojima ćete između ostalog naučiti da napravite semafor, sintisajzer, autić koji izbegava prepreke...
+			</td></tr></table><br>
+			<table><tr><th style="vertical-align: text-top;padding-right:2vw;"><img src="../files/check.svg" class="check"></th><td>
+				Takođe ćemo videti šta je sve potrebno da bi se napravili neki razni jednostavni roboti korišćenjem mikrokontrolera.
+			</td></tr></table><br>
+			<table><tr><th style="vertical-align: text-top;padding-right:2vw;"><img src="../files/check.svg" class="check"></th><td>
+				Na drugom delu kursa ući ćemo u svet 3D štampe!<br>
+				Imaćete priliku da saznate šta je to 3D štampač i kako se koristi.
+			</td></tr></table><br>
+			<table><tr><th style="vertical-align: text-top;padding-right:2vw;"><img src="../files/check.svg" class="check"></th><td>
+				Naučićete da napravite 3D model koji je spreman za štampu, kao i gde možete naći već gotove modele.
+			</td></tr></table><br>
+			<table><tr><th style="vertical-align: text-top;padding-right:2vw;"><img src="../files/check.svg" class="check"></th><td>
+				Takođe ćemo videti koje sve vrste 3D štampača postoje i za koje namene, kao i programe koji se koriste za pravljenje i štampu objekata.
+			</td></tr></table><br>
+			<table><tr><th style="vertical-align: text-top;padding-right:2vw;"><img src="../files/check.svg" class="check"></th><td>
+				Imaćete priliku i da koristite naše 3D štampače.
+			</td></tr></table><br>
+			<table id="prijava"><tr><th style="vertical-align: text-top;padding-right:2vw;"><img src="../files/check.svg" class="check"></th><td>
+				Putem interaktivnih predavanja i praktičnih radionica upoznaćete se sa svim neophodnim komponentama i naučiti kako da ih koristite za sopstvene ideje i projekte.
+			</td></tr></table><br>
+			<table><tr><th style="vertical-align: text-top;padding-right:2vw;"><img src="../files/check.svg" class="check"></th><td>
+				Kompletan kurs uključujući sva predavanja i materijale je u potpunosti <b style="color:#F08113">besplatan</b>.
+			</td></tr></table>
+			<div class="uclanisebutton"><a href="https://forms.gle/Z47EGAU6oioMEncV8" target="_blank" style="color:white;">Prijavi se!</a></div>
+			</div>
 			</div>
 		</div>
 
+		<div class="home4">
+			<span id="faq" style="position:absolute;top:-100px;"></span>
+			<div class="posttext2 posttext3">
+				Najčešće postavljana pitanja
+				<div class="postsubtext2 curpointer ps3">
+					<table><tr><th style="vertical-align: text-top;padding-right:2vw;"></th><td>
+						– Kojim danima i u kojim terminima se održava kurs?
+					</td></tr></table><br>
+					<table class="forsubtext"><tr><th style="vertical-align: text-top;padding-right:2vw;"><img src="../files/check.svg" class="check"></th><td>
+						Kurs će se održavati u 2 termina, prepodne i poslepodne, nekad radnim danima, ali i vikendom. Naknadno ćemo objaviti tačno vreme i datume koji su podležni promenama u dogovoru sa svim polaznicima.
+					</td></tr></table>
+				</div>
+				<div class="postsubtext2 curpointer ps3">
+					<table><tr><th style="vertical-align: text-top;padding-right:2vw;"></th><td>
+						– Šta ako propustim jedno predavanje/jedan dan?
+					</td></tr></table><br>
+					<table class="forsubtext"><tr><th style="vertical-align: text-top;padding-right:2vw;"><img src="../files/check.svg" class="check"></th><td>
+						Postojaće jedan termin nadoknade na kome ćete moći da nadoknadite propušteno.
+					</td></tr></table>
+				</div>
+				<div class="postsubtext2 curpointer ps3">
+					<table><tr><th style="vertical-align: text-top;padding-right:2vw;"></th><td>
+						– Nisam učenik u nekoj od OŠ opštine Stara Pazova ili nisam 7. ili 8. razred, da li mogu da se prijavim?
+					</td></tr></table><br>
+					<table class="forsubtext"><tr><th style="vertical-align: text-top;padding-right:2vw;"><img src="../files/check.svg" class="check"></th><td>
+						Ukoliko ostane slobodnih mesta možete pohađati kurs, neophodno je da nas <a href="#kontakt" class="akontakt">kontaktirate</a> pre popunjavanja prijave.
+					</td></tr></table>
+				</div>
+				<div class="postsubtext2 curpointer ps3">
+					<table><tr><th style="vertical-align: text-top;padding-right:2vw;"></th><td>
+						– Koliko dugo će trajati kurs?
+					</td></tr></table><br>
+					<table class="forsubtext"><tr><th style="vertical-align: text-top;padding-right:2vw;"><img src="../files/check.svg" class="check"></th><td>
+						Kurs se sastoji od 6 časova (+1 čas nadoknade) od po 2h. Cilj je da nedeljno budu 2 časa, što je podležno promenama ukoliko je to neophodno.
+					</td></tr></table>
+				</div>
+				<div class="postsubtext2 curpointer ps3">
+					<table><tr><th style="vertical-align: text-top;padding-right:2vw;"></th><td>
+						– Da li mi je nešto potrebno da ponesem?
+					</td></tr></table><br>
+					<table class="forsubtext"><tr><th style="vertical-align: text-top;padding-right:2vw;"><img src="../files/check.svg" class="check"></th><td>
+						Sva neophodna oprema je obezbeđena, svi materijali i prezentacije će biti dostupni na našem sajtu, a ukoliko želite možete poneti svesku i olovku.
+					</td></tr></table>
+				</div>
+				<div class="postsubtext2 curpointer ps3">
+					<table><tr><th style="vertical-align: text-top;padding-right:2vw;"></th><td>
+						– Kako je ovo besplatno?
+					</td></tr></table><br>
+					<table class="forsubtext"><tr><th style="vertical-align: text-top;padding-right:2vw;"><img src="../files/check.svg" class="check"></th><td>
+						Zahvaljujući našim pokroviteljima i prijateljima centra uspeli smo da nabavimo sve što je neophodno za realizaciju. Spisak svih prijatelja možete videti <a href="https://icerpazova.com/#prijatelji" class="akontakt">ovde</a>.
+					</td></tr></table>
+				</div>
+		</div>
 		
 		<div class="kontaktdiv">
 		<span id="kontakt" style="position:absolute;top:-100px;"></span>
