--- a/public/rob3d/index.html
+++ b/public/rob3d/index.html
@@ -72,6 +72,15 @@
 				</div>
 				<div class="postsubtext2 curpointer ps3">
 					<table><tr><th style="vertical-align: text-top;padding-right:2vw;"></th><td>
+						– Gde će se održavati kurs?
+					</td></tr></table><br>
+					<table class="forsubtext"><tr><th style="vertical-align: text-top;padding-right:2vw;"><img src="../files/check.svg" class="check"></th><td>
+						Kurs će se održavati u prostorijama inovacionog startap centra u Staroj Pazovi, Kralja Petra I Karađorđevića br. 2, 3. sprat. 
+						<a class="socialsa" href="https://goo.gl/maps/hsDg9SFjYU1LGFSQ9" target="_blank"><u>mapa</u></a>
+					</td></tr></table>
+				</div>
+				<div class="postsubtext2 curpointer ps3">
+					<table><tr><th style="vertical-align: text-top;padding-right:2vw;"></th><td>
 						– Šta ako propustim jedno predavanje/jedan dan?
 					</td></tr></table><br>
 					<table class="forsubtext"><tr><th style="vertical-align: text-top;padding-right:2vw;"><img src="../files/check.svg" class="check"></th><td>
@@ -156,13 +165,12 @@
 					icerpazova@gmail.com
 				</a>
 			</span>
-				
-			<!--<span class="newline">
-				<a class="socialsa" href="https://www.google.com/maps/place/44%C2%B059'06.5%22N+20%C2%B009'32.1%22E/@44.9851353,20.1574484,17z/data=!3m1!4b1!4m5!3m4!1s0x0:0x0!8m2!3d44.9851328!4d20.1589092" target="_blank">
-					Kralja Petra I Karađorđevića 2, 3. sprat,<br>
-					22300 Stara Pazova
+			
+			<span class="newline">
+				<a class="socialsa" href="https://goo.gl/maps/hsDg9SFjYU1LGFSQ9" target="_blank">
+					Kralja Petra I Karađorđevića 2, 3. sprat
 				</a>
-			</span>-->
+			</span>
 			
 			<span class="newline">
 				<a class="socialsa" href="../files/ICER_identifikacija.pdf" target="_blank">
