--- a/public/index.html
+++ b/public/index.html
@@ -188,12 +188,11 @@
 				</a>
 			</span>
 				
-			<!--<span class="newline">
-				<a class="socialsa" href="https://www.google.com/maps/place/44%C2%B059'06.5%22N+20%C2%B009'32.1%22E/@44.9851353,20.1574484,17z/data=!3m1!4b1!4m5!3m4!1s0x0:0x0!8m2!3d44.9851328!4d20.1589092" target="_blank">
-					Kralja Petra I Karađorđevića 2, 3. sprat,<br>
-					22300 Stara Pazova
+			<span class="newline">
+				<a class="socialsa" href="https://goo.gl/maps/hsDg9SFjYU1LGFSQ9" target="_blank">
+					Kralja Petra I Karađorđevića 2, 3. sprat
 				</a>
-			</span>-->
+			</span>
 			
 			<span class="newline">
 				<a class="socialsa" href="files/ICER_identifikacija.pdf" target="_blank">
