--- a/public/rob3d/index.html
+++ b/public/rob3d/index.html
@@ -17,7 +17,7 @@
 		<div class="home3">
 			<!--slika-->
 			<div class="categoryHolder">
-				<img src="../galerija/robotika.jpg" class="categoryDiv">
+				<img src="../galerija/rob3d.jpg" class="categoryDiv">
 				<div class="categoryDiv2">
 					<!--				
 					<div class="naslovMaterijali">OBAVEŠTENJE</div>
