--- a/public/rob3d/index.html
+++ b/public/rob3d/index.html
@@ -28,7 +28,7 @@
 						<br><br>
 						Materijale za pripremu za takmičenje možete pronaći u sekciji <a href="https://drive.google.com/drive/folders/1wU5ucyvCpeBo9bX3PMged6gxCQlWVlys?usp=sharing" target="_blank" class=""><u>materijali</u></a>, pitanja će biti iz vežbi i prezentacija koje smo do sad radili.
 						<br><br>
-						Molimo vas da proverite da li se nalazite na <a href="https://docs.google.com/spreadsheets/d/1owwuf1fldM10XDQK7m_JiQ6wAHNngZ7BC5M828c6FV8/edit?usp=share_link" target="_blank" class=""><u>spisku</u></a>
+						Molimo vas da proverite da li se nalazite na <a href="https://docs.google.com/spreadsheets/d/1owwuf1fldM10XDQK7m_JiQ6wAHNngZ7BC5M828c6FV8/edit?usp=share_link" target="_blank" class=""><u>spisku</u></a> kao i da li vam je tačno napisano ime i prezime, ukoliko primetite grešku javite nam.
 						<br><br>
 						Nadoknada takmičenja nije moguća, a ukoliko ne možete doći sutra po sertifikat dogovorićemo se naknadno oko preuzimanja.
 					</div>
