--- a/public/sertifikati/rob3d/index.html
+++ b/public/sertifikati/rob3d/index.html
@@ -26,6 +26,12 @@
 			margin:2vw auto;
 			background-size: 100% auto;
 		}
+		@media screen and (max-width:800px){
+    .sertifikatTemplate{
+        width:90vw;
+        height: 63.51vw;
+    } 
+}
 	  </style>
   </head>
   <body>
