--- a/public/galerija/index.html
+++ b/public/galerija/index.html
@@ -10,6 +10,7 @@
 	  <link rel="stylesheet" href="galerija.css" />
 	  <script src="../files/jsscript.js"></script>
 	  <link rel="shortcut icon" type="image/jpg" href="../favicon.png"/>
+	  <!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=AW-11065114940"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-11065114940'); </script>
   </head>
   <body>
 	<div class="main">
