--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
 	  <link rel="shortcut icon" type="image/jpg" href="favicon.png"/>
 	<link rel="stylesheet" href="pannellum/pannellum.css"/>
 	<script src="pannellum/pannellum.js"></script>
+	<!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=AW-11065114940"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-11065114940'); </script>
   </head>
   <body onload="setpanorama()" onresize="resizeFun()">
 	<div class="main">
