--- a/public/sertifikati/dizajn/index.html
+++ b/public/sertifikati/dizajn/index.html
@@ -17,6 +17,7 @@
 		else document.getElementById("arr").className="downarr";
 	}
 	  </script>
+	  <!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=AW-11065114940"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-11065114940'); </script>
   </head>
   <body>
 	<div class="main">
