--- a/public/sertifikati/rob3d/index.html
+++ b/public/sertifikati/rob3d/index.html
@@ -33,6 +33,7 @@
     } 
 }
 	  </style>
+	  <!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=AW-11065114940"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-11065114940'); </script>
   </head>
   <body>
 	<div class="main">
