--- a/public/galerija/index.html
+++ b/public/galerija/index.html
@@ -23,6 +23,13 @@
 				<a href="https://drive.google.com/drive/folders/17eZwueYBxRD75mYhkVXq1dmXh0qC7qqf?usp=sharing" target="_blank"><img src="3d.jpg" class="categoryDiv"></a>
 				<a href="https://drive.google.com/drive/folders/1pfr8_e7hfH6NOl4CBEHVg_zQDDkgPZMA?usp=sharing" target="_blank"><img src="prostorije.jpg" class="categoryDiv"></a>
 				<a href="https://drive.google.com/drive/folders/1nVEvZN9M7oUw6T4Qv0TWy5hMYtZZZ9Yv?usp=sharing" target="_blank"><img src="robotika.jpg" class="categoryDiv"></a>
+				<a href="https://drive.google.com/drive/folders/1CN42xIhVmaENDJcXseH3WGTHXZTFm-GD?usp=share_link" target="_blank"><img src="rob3d.jpg" class="categoryDiv"></a>
+			</div>
+			<div class="categoryHolder">
+				<a href="https://drive.google.com/drive/folders/1s9hqyqOiXPXcWlRRQalDnZCjTuzT6vTS?usp=sharing" target="_blank"><img src="ploteri.jpg" class="categoryDiv"></a>
+				<a href="https://drive.google.com/drive/folders/1FBqLH1VYhicJ6a0IrUKHsQOtiEI6nYw9?usp=sharing" target="_blank"><img src="gd.jpg" class="categoryDiv"></a>
+				<a href="https://drive.google.com/drive/folders/1ZOisG3Fp6migTucS7P3XDTPB0_TvzDuZ?usp=share_link" target="_blank"><img src="mbot.JPG" class="categoryDiv"></a>
+				<a href="https://drive.google.com/drive/folders/1S2ugPj3fSoqlh7tvINqu0AD740py8yYI?usp=share_link" target="_blank"><img src="dronovi.JPG" class="categoryDiv"></a>
 			</div>
 		</div>
 		
