--- a/public/dizajn/index.html
+++ b/public/dizajn/index.html
@@ -60,6 +60,11 @@
 			</span>
 				
 			<span class="newline">
+				<a class="socialsa" href="mailto:office@icerpazova.com">
+					office@icerpazova.com
+				</a>
+			</span>
+			<span class="newline">
 				<a class="socialsa" href="mailto:icerpazova@gmail.com">
 					icerpazova@gmail.com
 				</a>
