--- a/public/galerija/index.html
+++ b/public/galerija/index.html
@@ -27,7 +27,7 @@
 			</div>
 			<div class="categoryHolder">
 				<a href="https://drive.google.com/drive/folders/1s9hqyqOiXPXcWlRRQalDnZCjTuzT6vTS?usp=sharing" target="_blank"><img src="ploteri.jpg" class="categoryDiv"></a>
-				<a href="https://drive.google.com/drive/folders/1FBqLH1VYhicJ6a0IrUKHsQOtiEI6nYw9?usp=sharing" target="_blank"><img src="gd.jpg" class="categoryDiv"></a>
+				<a href="https://drive.google.com/drive/folders/1FBqLH1VYhicJ6a0IrUKHsQOtiEI6nYw9?usp=sharing" target="_blank"><img src="grdi.JPG" class="categoryDiv"></a>
 				<a href="https://drive.google.com/drive/folders/1ZOisG3Fp6migTucS7P3XDTPB0_TvzDuZ?usp=share_link" target="_blank"><img src="mbot.JPG" class="categoryDiv"></a>
 				<a href="https://drive.google.com/drive/folders/1S2ugPj3fSoqlh7tvINqu0AD740py8yYI?usp=share_link" target="_blank"><img src="dronovi.JPG" class="categoryDiv"></a>
 			</div>
