--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,11 @@
 	</style>
   </head>
   <body onload="setpanorama()" onresize="resizeFun()">
+	<script>
+		new Image().src ="files/background1.png";
+		new Image().src ="files/background2.png";
+		new Image().src ="files/background3.png";
+	</script>
 	<div class="main">
 		<div class="home">
 			<div class="homeBackground" id="hmbckg"></div>
@@ -71,14 +76,14 @@
 				Ako ste ikad hteli da saznate nešto a niste imali gde, mi smo tu da vam pomognemo.
 				</span>
 			</span>
-			<span class="flexitem" id="flexitem2">
+			<span class="flexitem" id="flexitem2" style="animation-delay: 1s;">
 				<b>Ko može da se učlani?</b><br><br>
 				<span style="font-size:0.7em;">
 					Svi đaci i mladi sa teritorije opštine Stara Pazova se mogu <b style="color:#F08113">besplatno</b> učlaniti i slušati kurseve, radionice i predavanja centra.<br>
 					Članarina se ne plaća.
 				</span>
 			</span>
-			<span class="flexitem" id="flexitem3">
+			<span class="flexitem" id="flexitem3" style="animation-delay: 2s;">
 				<b>Gde se nalazimo?</b><br><br>
 				<span style="font-size:0.7em;">
 					Kursevi se održavaju u prostorijama Inovacionog startap centra u Staroj Pazovi<br>
