--- a/public/index.html
+++ b/public/index.html
@@ -106,7 +106,7 @@
 					<div class="arrslide" onclick="slideshow(0)">&#9665;</div>
 					<div class="slidepic">
 						<a href="novikurs/index.html"><img src="files/tvojaideja.png" class="secondarypic1" id="slideop1"></a>
-						<a href="rob3d/index.html"><img src="files/rob3dslika.png" class="slidemainpic" id="slideop2"></a>
+						<a href="https://forms.gle/E9DxmGrHRNNkmupu9" target="_blank"><img src="files/priprema.png" class="slidemainpic" id="slideop2"></a>
 						<a href="novikurs/index.html"><img src="files/uskorokursevi.png" class="secondarypic2" id="slideop3"></a>
 					</div>
 					<div class="arrslide" onclick="slideshow(1)">&#9655;</div>
