added gallery view

--- a/public/index.html
+++ b/public/index.html
@@ -156,6 +156,38 @@
 				Prostor Inovacionog startap centra u Staroj Pazovi
 			</div>
 		</div>
+
+		
+		<div class="aboutushead">
+			<span id="galerija" style="position:absolute;top:-100px;"></span>
+				GALERIJA
+		</div>
+
+		<div class="slike">
+			<div class="marquee2" id="scrollmarquee">
+				<img src="files/slikezaprikaz/6.png" class="slikax">
+				<img src="files/slikezaprikaz/7.png" class="slikax">
+				<img src="files/slikezaprikaz/14.png" class="slikax">
+				<img src="files/slikezaprikaz/5.png" class="slikax">
+				<img src="files/slikezaprikaz/8.png" class="slikax">
+				<img src="files/slikezaprikaz/2.png" class="slikax">
+				<img src="files/slikezaprikaz/9.png" class="slikax">
+				<img src="files/slikezaprikaz/4.png" class="slikax">
+				<img src="files/slikezaprikaz/10.png" class="slikax">
+				<img src="files/slikezaprikaz/11.png" class="slikax">
+				<img src="files/slikezaprikaz/13.png" class="slikax">
+				<img src="files/slikezaprikaz/3.png" class="slikax">
+				<img src="files/slikezaprikaz/12.png" class="slikax">
+				<img src="files/slikezaprikaz/1.png" class="slikax">
+			</div>
+			<div class="bluegradient"></div>
+			<div class="bluegradient2"></div>
+			<div class="arrslide2" onclick="scrollmarquee.scrollBy({top: 0,left: -800,behavior: 'smooth'});" style="left:0">&#9665;</div>
+			<div class="arrslide2" onclick="scrollmarquee.scrollBy({top: 0,left: 800,behavior: 'smooth'});" style="right:0">&#9655;</div>
+			<div class="galerijatext" onclick="location.href='galerija/index.html'">
+				Vidi celu galeriju!
+			</div>
+		</div>
 		
 		<div class="sponsors">
 		<span id="prijatelji" style="position:absolute;top:-100px;"></span>
@@ -237,7 +269,7 @@
 		<span class="newline"><a class="headerLinks" onclick="setTimeout('menu()',300);" href="#uclanise"><span id="uclanisespan" class="linija"></span><span id="uclanisehead">Učlani se!</span></a></span>
 		<span class="newline"><a class="headerLinks" onclick="setTimeout('menu()',300);" href="#prijatelji"><span id="prijateljispan" class="linija"></span><span id="prijateljihead">Prijatelji</span></a></span>
 		<span class="newline"><a class="headerLinks" onclick="setTimeout('menu()',300);" href="rob3d/index.html"><span id="rob3dspan" class="linija"></span><span id="rob3dhead">Robotika i 3D štampa</span></a></span>
-		<span class="newline"><a class="headerLinks" onclick="setTimeout('menu()',300);" href="galerija/index.html"><span id="galerijaspan" class="linija"></span><span id="galerijahead">Galerija</span></a></span>
+		<span class="newline"><a class="headerLinks" onclick="setTimeout('menu()',300);" href="#galerija"><span id="galerijaspan" class="linija"></span><span id="galerijahead">Galerija</span></a></span>
 		<span class="newline"><a class="headerLinks" onclick="setTimeout('menu()',300);" href="#kontakt"><span id="kontaktspan" class="linija"></span><span id="kontakthead">Kontakt</span></a></span>
 		</span>
 		<img src="files/logo_transparent.png" class="head_logo" id="headLogo" onclick="location.reload();" alt="ICER">
