scroll for gallery

--- a/public/index.html
+++ b/public/index.html
@@ -164,7 +164,7 @@
 		</div>
 
 		<div class="slike">
-			<div class="marquee2" id="scrollmarquee">
+			<div class="marquee2" style="display: none;left:100vw;" id="scrollmarquee">
 				<img src="files/slikezaprikaz/6.png" class="slikax">
 				<img src="files/slikezaprikaz/7.png" class="slikax">
 				<img src="files/slikezaprikaz/14.png" class="slikax">
