--- a/public/index.html
+++ b/public/index.html
@@ -183,7 +183,7 @@
 			<div class="bluegradient"></div>
 			<div class="bluegradient2"></div>
 			<div class="arrslide2" onclick="scrollmarquee.scrollBy({top: 0,left: -800,behavior: 'smooth'});" style="left:0">&#9665;</div>
-			<div class="arrslide2" onclick="scrollmarquee.scrollBy({top: 0,left: 800,behavior: 'smooth'});" style="right:0">&#9655;</div>
+			<div class="arrslide2" onclick="scrollmarquee.scrollBy({top: 0,left: 800,behavior: 'smooth'});" style="right:0;transform: rotate(180deg);">&#9665;</div>
 			<div class="galerijatext" onclick="location.href='galerija/index.html'">
 				Vidi celu galeriju!
 			</div>
