--- a/public/web/index.html
+++ b/public/web/index.html
@@ -20,22 +20,24 @@
 			<div class="categoryHolder">
 				<img src="web.png" class="categoryDiv">
 				<div class="categoryDiv2">
-<!--
+
 					<div class="naslovMaterijali">OBAVEŠTENJE</div>
 				
 					<div class="obavestenje">
-						Obaveštavamo vas da ćemo u <b>utorak 29.11. od 15h</b> imati dodelu sertifikata za sve koji su uspešno odslušali kurs kao i takmičenje koje predstavlja završni test kao provera znanja stečenog na kursu. Takmičenje je zabavnog karaktera i služi vam da utvrdite znanje koje ste stekli, a za najuspešnije smo pripremili i simbolične nagrade i diplome.
+						Prvi čas će biti održan u nedelju 23.07.2023. u dva termina. Raspored možete videti na sledećem <a href="https://docs.google.com/spreadsheets/d/1qm_wvIqjsakNELFPP3p4QRB_6jL3lTbp7QqXVR5VVGY/edit?usp=sharing" target="_blank" class=""><u>linku</u></a>.
 						<br><br>
-						Takmičenje je u vidu kviza od 25 pitanja (na platformi kahoot) sa ponuđenim odgovorima, takmičite se u grupama 2-3.
+						Ukoliko želite da zamenite termin ili niste u mogućnosti da prisustvujete ni na jednom terminu molimo Vas da nas kontaktirate. Nakon prvog časa ćemo se dogovoriti o ostalim terminima.
 						<br><br>
-						Materijale za pripremu za takmičenje možete pronaći u sekciji <a href="https://drive.google.com/drive/folders/1wU5ucyvCpeBo9bX3PMged6gxCQlWVlys?usp=sharing" target="_blank" class=""><u>materijali</u></a>, pitanja će biti iz vežbi i prezentacija koje smo do sad radili.
+						Sva neophodna oprema je obezbeđena, ali ukoliko želite možete poneti svoj laptop i raditi na njemu, pomoći ćemo vam da preuzmete i instalirate sve neophodne programe.
 						<br><br>
-						Molimo vas da proverite da li se nalazite na <a href="https://docs.google.com/spreadsheets/d/1owwuf1fldM10XDQK7m_JiQ6wAHNngZ7BC5M828c6FV8/edit?usp=share_link" target="_blank" class=""><u>spisku</u></a> kao i da li vam je tačno napisano ime i prezime, ukoliko primetite grešku javite nam.
+						Kursevi se održavaju u Inovacionom startup centru u Staroj Pazovi, Kralja Petra I Karađorđevića 2, 3. sprat - 
+						<a href="https://goo.gl/maps/kG7qbs2iy5czyjHQ7" target="_blank" class=""><u>Mapa</u></a>.
 						<br><br>
-						Nadoknada takmičenja nije moguća, a ukoliko ne možete doći sutra po sertifikat dogovorićemo se naknadno oko preuzimanja.
+						Za sva pitanja stojimo Vam na raspolaganju,<br>
+						Vidimo se!
 					</div>
 
-
+  <!--
 					<div class="naslovMaterijali">ANKETA I OCENA</div>
 				
 					<a href="https://docs.google.com/forms/d/e/1FAIpQLSfzHtzW3_fbVvojJbioHi6NEkfCZ_BJaob8k9k6YLi_VxSU_g/viewform?usp=sf_link" target="_blank" title="Anketa" class="hoveringA">
@@ -78,7 +80,7 @@
 					</a>
 				-->
 					<div class="naslovMaterijali">MATERIJALI</div>
-
+<!--
 					<a href="https://www.w3schools.com/" target="_blank" title="W3Schools" class="hoveringA">
 						<div class="linksDiv">
 							<img src="w3.png" class="linkIcon" alt="W3Schools">
@@ -98,7 +100,7 @@
 							</span>
 						</div>
 					</a>
-
+-->
 					<a href="https://docs.google.com/spreadsheets/d/1qm_wvIqjsakNELFPP3p4QRB_6jL3lTbp7QqXVR5VVGY/edit?usp=sharing" target="_blank" title="Materijali" class="hoveringA">
 						<div class="linksDiv">
 							<img src="calendar.svg" class="linkIcon" alt="Termini">
