--- a/public/web/index.html
+++ b/public/web/index.html
@@ -24,16 +24,14 @@
 					<div class="naslovMaterijali">OBAVEŠTENJE</div>
 				
 					<div class="obavestenje">
-						Prvi čas će biti održan u nedelju 23.07.2023. u dva termina. Raspored možete videti na sledećem <a href="https://docs.google.com/spreadsheets/d/1qm_wvIqjsakNELFPP3p4QRB_6jL3lTbp7QqXVR5VVGY/edit?usp=sharing" target="_blank" class=""><u>linku</u></a>.
+						Drugi čas će biti održan u sredu 26.07.2023. u dva termina <a href="https://docs.google.com/spreadsheets/d/1qm_wvIqjsakNELFPP3p4QRB_6jL3lTbp7QqXVR5VVGY/edit?usp=sharing" target="_blank" style="color:blue">(link)</a>. Na spisku se nalaze samo oni koji su bili na prvom času. Treći čas će biti u subotu, takođe u dva termina: 11:00-13:00 i 13:30-15:30.
 						<br><br>
-						Ukoliko želite da zamenite termin ili niste u mogućnosti da prisustvujete ni na jednom terminu molimo Vas da nas kontaktirate. Nakon prvog časa ćemo se dogovoriti o ostalim terminima.
+						Ukoliko želite da nadoknadite prvi čas ili ne možete doći u sredu (na drugi čas) ili u subotu (na treći čas) molimo Vas da nas kontaktirate.
 						<br><br>
-						Sva neophodna oprema je obezbeđena, ali ukoliko želite možete poneti svoj laptop i raditi na njemu, pomoći ćemo vam da preuzmete i instalirate sve neophodne programe.
+						Kako je teško uskladiti termine tako da svima odgovaraju molimo Vas da se trudite da prisustvujete u datim terminima. 
 						<br><br>
-						Kursevi se održavaju u Inovacionom startup centru u Staroj Pazovi, Kralja Petra I Karađorđevića 2, 3. sprat - 
-						<a href="https://goo.gl/maps/kG7qbs2iy5czyjHQ7" target="_blank" class=""><u>Mapa</u></a>.
+						Termine za nadoknadu ćemo objaviti kada nam se jave svi zainteresovani. Postoji mogućnost organizovanja nadoknade sva 3 časa sledeće nedelje ukoliko to bude neophodno.
 						<br><br>
-						Za sva pitanja stojimo Vam na raspolaganju,<br>
 						Vidimo se!
 					</div>
 
