--- a/public/web/index.html
+++ b/public/web/index.html
@@ -24,14 +24,8 @@
 					<div class="naslovMaterijali">OBAVEŠTENJE</div>
 				
 					<div class="obavestenje">
-						Drugi čas će biti održan u sredu 26.07.2023. u dva termina <a href="https://docs.google.com/spreadsheets/d/1qm_wvIqjsakNELFPP3p4QRB_6jL3lTbp7QqXVR5VVGY/edit?usp=sharing" target="_blank" style="color:blue">(link)</a>. Na spisku se nalaze samo oni koji su bili na prvom času. Treći čas će biti u subotu, takođe u dva termina: 11:00-13:00 i 13:30-15:30.
-						<br><br>
-						Ukoliko želite da nadoknadite prvi čas ili ne možete doći u sredu (na drugi čas) ili u subotu (na treći čas) molimo Vas da nas kontaktirate.
-						<br><br>
-						Kako je teško uskladiti termine tako da svima odgovaraju molimo Vas da se trudite da prisustvujete u datim terminima. 
-						<br><br>
-						Termine za nadoknadu ćemo objaviti kada nam se jave svi zainteresovani. Postoji mogućnost organizovanja nadoknade sva 3 časa sledeće nedelje ukoliko to bude neophodno.
-						<br><br>
+						Treći čas će biti održan u subotu 29.07.2023. u dva termina <a href="https://docs.google.com/spreadsheets/d/1qm_wvIqjsakNELFPP3p4QRB_6jL3lTbp7QqXVR5VVGY/edit?usp=sharing" target="_blank" style="color:blue">(link)</a>. 
+						<br>
 						Vidimo se!
 					</div>
 
