--- a/public/web/index.html
+++ b/public/web/index.html
@@ -24,7 +24,7 @@
 					<div class="naslovMaterijali">OBAVEŠTENJE</div>
 				
 					<div class="obavestenje">
-						Treći čas će biti održan u subotu 29.07.2023. u dva termina <a href="https://docs.google.com/spreadsheets/d/1qm_wvIqjsakNELFPP3p4QRB_6jL3lTbp7QqXVR5VVGY/edit?usp=sharing" target="_blank" style="color:blue">(link)</a>. 
+						Četvrti čas će biti održan u subotu 05.08.2023. u dva termina <a href="https://docs.google.com/spreadsheets/d/1qm_wvIqjsakNELFPP3p4QRB_6jL3lTbp7QqXVR5VVGY/edit?usp=sharing" target="_blank" style="color:blue">(link)</a>. 
 						<br>
 						Vidimo se!
 					</div>
