--- a/public/web/index.html
+++ b/public/web/index.html
@@ -21,15 +21,6 @@
 				<img src="web.png" class="categoryDiv">
 				<div class="categoryDiv2">
 
-					<div class="naslovMaterijali">OBAVEŠTENJE</div>
-				
-					<div class="obavestenje">
-						Sedmi čas će biti održan u subotu 19.08.2023. u dva termina <a href="https://docs.google.com/spreadsheets/d/1qm_wvIqjsakNELFPP3p4QRB_6jL3lTbp7QqXVR5VVGY/edit?usp=sharing" target="_blank" style="color:blue">(link)</a>. 
-						<br>
-						Vidimo se!
-					</div>
-
-  <!--
 					<div class="naslovMaterijali">ANKETA I OCENA</div>
 				
 					<a href="https://docs.google.com/forms/d/e/1FAIpQLSfzHtzW3_fbVvojJbioHi6NEkfCZ_BJaob8k9k6YLi_VxSU_g/viewform?usp=sf_link" target="_blank" title="Anketa" class="hoveringA">
@@ -70,7 +61,6 @@
 							</span>
 						</div>
 					</a>
-				-->
 					<div class="naslovMaterijali">MATERIJALI</div>
 
 					<a href="https://www.w3schools.com/" target="_blank" title="W3Schools" class="hoveringA">
@@ -83,12 +73,12 @@
 						</div>
 					</a>
 
-					<a href="https://drive.google.com/drive/folders/1WvwvocetOkBSKYy01DFhb1472G_RMTpa?usp=sharing" target="_blank" title="Materijali" class="hoveringA">
+					<a href="primeri/index.html" target="_blank" title="Materijali" class="hoveringA">
 						<div class="linksDiv">
 							<img src="files.svg" class="linkIcon" alt="Materijali">
-							<span class="linksTitle">Materijali</span>
+							<span class="linksTitle">Primeri</span>
 							<span class="linksText">
-								Ovde možete pronaći sve materijale koje koristimo na časovima (prezentacije, linkove, programe...).
+								Ovde možete pronaći sve primere koje smo koristili na časovima.
 							</span>
 						</div>
 					</a>
