--- a/public/web/primeri/index.html
+++ b/public/web/primeri/index.html
@@ -189,7 +189,7 @@
             <div class="card" onclick="window.open('primer5/index.html')">
                 <b class="naziv">Primer 5</b>
                 <br><br>
-                Primer responzivne stranice i dodatnih stilova u CSS-u. Stranica menja izgled u odnosu na širinu ekrana i ima 3 stanja.
+                Primer responzivne stranice i dodatnih stilova u CSS-u. Stranica menja izgled u odnosu na širinu ekrana.
             </div>
             <div class="card" onclick="window.open('primer6/index.html')">
                 <b class="naziv">Primer 6</b>
