final exam link and video tutorial

--- a/public/web/index.html
+++ b/public/web/index.html
@@ -83,12 +83,12 @@
 						</div>
 					</a>
 
-					<a href="https://docs.google.com/spreadsheets/d/1qm_wvIqjsakNELFPP3p4QRB_6jL3lTbp7QqXVR5VVGY/edit?usp=sharing" target="_blank" title="Materijali" class="hoveringA">
+					<a href="final.html" target="_blank" title="Materijali" class="hoveringA">
 						<div class="linksDiv">
-							<img src="calendar.svg" class="linkIcon" alt="Termini">
-							<span class="linksTitle">Termini</span>
+							<img src="files.svg" class="linkIcon" alt="Materijali">
+							<span class="linksTitle">Završna vežba</span>
 							<span class="linksText">
-								Ovde možete videti termine za sledeći čas. Za promenu termina molimo vas da nas kontaktirate.
+								Zahtevi i predlozi za projekat koji predstavlja poslednju vežbu na kursu.
 							</span>
 						</div>
 					</a>
