promena video u fajl

--- a/public/web/primeri/index.html
+++ b/public/web/primeri/index.html
@@ -260,7 +260,7 @@
             </div>
         </div>
         <div class="title">
-            Video uputstvo za postavljanje sajta na Firebase + GitHub + VS Code
+            Video fajl za postavljanje sajta na Firebase + GitHub + VS Code
         </div>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/PZdsNv74q6w?si=KxIRzu_3RgRveM6H" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen style="margin: 0 auto;"></iframe>
     </body>
