--- a/public/web/index.html
+++ b/public/web/index.html
@@ -86,7 +86,7 @@
 					<a href="final.html" target="_blank" title="Materijali" class="hoveringA">
 						<div class="linksDiv">
 							<img src="files.svg" class="linkIcon" alt="Materijali">
-							<span class="linksTitle">Završna vežba</span>
+							<span class="linksTitle">Završni projekat</span>
 							<span class="linksText">
 								Zahtevi i predlozi za projekat koji predstavlja poslednju vežbu na kursu.
 							</span>
