--- a/public/web/primeri/index.html
+++ b/public/web/primeri/index.html
@@ -260,8 +260,11 @@
             </div>
         </div>
         <div class="title">
-            Video fajl za postavljanje sajta na Firebase + GitHub + VS Code
+            Video fajl za postavljanje sajta na Firebase i video koji dodaje GitHub + VS Code
         </div>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/PZdsNv74q6w?si=KxIRzu_3RgRveM6H" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen style="margin: 0 auto;"></iframe>
+        <div class="cards">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/awrk7lg0X_Q?si=K8fGAvjK4TsNJY50" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/PZdsNv74q6w?si=KxIRzu_3RgRveM6H" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
     </body>
 </html>
