--- a/public/web/final.html
+++ b/public/web/final.html
@@ -53,7 +53,7 @@
             <li>Responzivan dizajn, prilagođen za različite uređaje</li>
             <li>Podržava najpopularnije pretraživače</li>
             <li>Postojanje raznih funkcionalnosti korišćenjem JavaScript-a</li>
-            <li>Sajt je potrebno da bude postavljen javno na GitHub-u i da bude hostovan na Firebase-u.</li>
+            <li>Sajt je potrebno da bude hostovan na Firebase-u. <a href="https://youtu.be/awrk7lg0X_Q?si=olXFBD9LzTbVkVfW">Link ka uputstvu.</a></li>
         </ul>
 
             Potrebno je iskoristiti sve što smo radili na časovima, a obavezno imati bar sledeće stvari: 
