--- a/public/web/final.html
+++ b/public/web/final.html
@@ -4,6 +4,7 @@
         <title>Final exam - homework</title>
         <link rel="icon" type="image/png" href="../favicon.png">
         <meta charset="UTF-8">
+		<meta property="og:image" content="https://icerpazova.com/web/final.png">
         <style>
 
             @font-face {
